add_subdirectory(libBaseCommon)
add_subdirectory(libBaseCommon/test/TestBaseCommon)
add_subdirectory(libBaseNetwork)
add_subdirectory(libBaseDatabase)
add_subdirectory(libBaseDatabase/test/TestBaseDatabase)
add_subdirectory(libBaseLua)
add_subdirectory(libBaseLua/test/TestBaseLua)
add_subdirectory(libCoreCommon)
add_subdirectory(libCoreCommon/test/TestFuture)
add_subdirectory(libCoreCommon/test/TestTicker)